fix: fix header z-index

--- a/src/styles/layouts/_header.scss
+++ b/src/styles/layouts/_header.scss
@@ -1,5 +1,6 @@
 .header {
   position: sticky;
+  z-index: 2;
   background-color: $color-light;
   top: 0;
   box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
